--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <p>
         <ul>
-          <li><strong><a href="contacto.html">Contacto</a></strong></li>
+          <li><strong><a href="CV/contacto.html">Contacto</a></strong></li>
           <li><strong><a href="PI.pdf">Ingeniería Industrial - Proyecto Integrador - Gestión de stock en una fábrica de correas automotrices</a></strong></li>
         </ul>
       </p>
